--- a/wap/db/templates/base.html
+++ b/wap/db/templates/base.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>USE THE LINKS</title>
 </head>
 <body>
-    {{message}}
+    http://127.0.0.1:8000/getuser/ - For all users (login, pass) <br>
+    http://127.0.0.1:8000/getprojects/ - for all details of projects <br>
+    http://127.0.0.1:8000/getsignedup/ - for a list of all people signed up to projects <br>
     
 </body>
 </html>
