--- a/wap/db/templates/base.html
+++ b/wap/db/templates/base.html
@@ -9,6 +9,7 @@
     http://127.0.0.1:8000/getuser/ - For all users (login, pass) <br>
     http://127.0.0.1:8000/getprojects/ - for all details of projects <br>
     http://127.0.0.1:8000/getsignedup/ - for a list of all people signed up to projects <br>
+    http://127.0.0.1:8000/gettokens/ - for a tokens with usernames <br>
     
 </body>
 </html>
