--- a/wap/db/templates/base.html
+++ b/wap/db/templates/base.html
@@ -10,6 +10,7 @@
     http://127.0.0.1:8000/getprojects/ - for all details of projects <br>
     http://127.0.0.1:8000/getsignedup/ - for a list of all people signed up to projects <br>
     http://127.0.0.1:8000/gettokens/ - for a tokens with usernames <br>
+    http://127.0.0.1:8000/getwhitelist/ - for a list of whitelist people<br>
     
 </body>
 </html>
