--- a/hackathon/test1.css
+++ b/hackathon/test1.css
@@ -17,8 +17,9 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh; /* Full height of the viewport */
-  background-image: url('back3.jpeg'); /* Add your image path here */
+  /* background-image: url('back3.jpeg'); 
     background-size: cover; /* Cover the entire container */
+    background-color:#7078a3; ;
     background-position: center; /* Center the background image */
 }
 
@@ -34,12 +35,12 @@ body {
     top: 50%; /* Position from the top at 50% */
     left: 50%; /* Position from the left at 50% */
     transform: translate(-50%, -50%); /* Move the container back by half its own width and height */
-    
+    background-color: rgba(202, 182, 227, 0.69);
     border-radius: 15px;
   }
   
   .transfer-form {
-    background-color: rgba(214, 247, 231, 0.8); /* Adjust the opacity and color of the background */
+    /* background-color: rgba(188, 149, 235, 0.786);  */
     border-radius: 15px;
     padding: 20px; /* Add padding to the form */
   }
@@ -48,22 +49,27 @@ body {
     margin-bottom: 20px; /* Add spacing below the heading */
   }
   
-  
+  label{
+    padding-bottom: 200px;
+  }
   label, input, button {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   
   input[type="text"] {
-    border: 3px solid #6ead78;
+    border: 3px solid #000000;
     width: calc(100% - 30px);
     height: 40px;
     transition: border-color 0.3s ease;
-    border-radius: 50px;
+    border-radius: 20px;
+    padding-left: 15px;
+    padding-top: 10px;
+    margin-top: 10px;
   }
   
   input[type="text"]:focus {
     outline: none;
-    border-color: #0fd0c3;
+    border-color: #000000;
     box-shadow: 0 0 5px rgba(137, 216, 162, 0.5);
     cursor: pointer;
   }
@@ -72,7 +78,7 @@ body {
     width: calc(100% - 30px);
     padding: 10px;
     font-size: 15px;
-    background-color: #40af6b;
+    background-color: #3d4fb8;
     color: #fff;
     border: none;
     border-radius: 3px;
@@ -83,21 +89,28 @@ body {
   }
   
   button:hover {
-    background-color: #a9e2c7;
+    background-color:#a9e2c7;
   }
   
 pre {
   margin-top: 20px
 }
-
+h2{
+  color: white;
+}
+label{
+  color: white;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
 
 .container {
   position: fixed;
   width: 1086px;
-  height: 579px;
+  height: 500px;
   top: 50%; /* Position from the top at 50% */
   left: 50%; /* Position from the left at 50% */
   transform: translate(-50%, -50%); /* Move the container back by half its own width and height */
-  background-color: #d6f7e7;
+  background-color: rgba(255, 255, 255, 0.527);
   border-radius: 15px;
 }
