--- a/hackathon/Listings2.css
+++ b/hackathon/Listings2.css
@@ -81,8 +81,9 @@
   /* Style the header */
   header {
     background-color: #ffffff;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 15px 20px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.7); /* Add shadow */
+  padding: 15px 20px;
+  background-color:#3d4fb8;
   }
   
   /* Style the navbar */
@@ -90,6 +91,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color:white;
   }
   
   /* Style the logo */
@@ -101,6 +103,7 @@
   .nav-links {
     list-style-type: none;
     display: flex;
+    color:white;
   }
   
   .nav-links li {
@@ -113,7 +116,7 @@
   
   .nav-links a {
     text-decoration: none;
-    color: #333333;
+    color: #f5f5f5;
     font-weight: bold;
     transition: color 0.3s ease;
   }
@@ -130,7 +133,7 @@
   
   .user-actions a {
     text-decoration: none;
-    color: #333333;
+    color: #f7f2f2;
     font-weight: bold;
     margin-right: 20px; /* Add some spacing between "Sign In" and the logo */
     transition: color 0.3s ease;
@@ -140,4 +143,41 @@
   .user-actions a:hover {
     color: #007bff; /* Change to desired hover color */
   }
+
+  .sidebar{
+    justify-content: center;
+    padding-left: 20px;
+    padding-top: 30px;
+    padding-bottom: 12%;
+    height:fit-content;
+    list-style-type: none;
+    background-color: #7078a3;
+    
+  }
+  
+  .sidebar li {
+    margin-bottom: 10px; /* Add margin between list items */
+    list-style-type: none;
+  }
+  
+  .sidebar a {
+    color: white; /* Set font color to white */
+    text-decoration: none;
+    font-size:25px; /* Remove default underline */
+  }
+
+  .signed-up{
+    background-color: #7078a3;
+  color:white;
+  width:280px;
+  padding-left: 50px;
+  height:fit-content;
+  margin-top: 100px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.7);
+  
+  }
+  .signed-up ul{
+    list-style-type: none;
+  }
+  
   
