color transition 0.3s side bar links

--- a/hackathon/Listings.css
+++ b/hackathon/Listings.css
@@ -249,6 +249,15 @@ header {
   font-size:25px; /* Remove default underline */
 }
 
+.side-links a {
+  margin-right: 20px;
+  margin-left: 20px;
+  text-decoration: none;
+  color:white;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
 .side-links a:hover {
   color: #4b4e5d89; /* Change to desired hover color */
 }
