--- a/hackathon/Listings.css
+++ b/hackathon/Listings.css
@@ -60,13 +60,17 @@ h1{
   width: 100%;
   padding: 0.5rem;
   border: 1px solid #ddd;
+  margin: 5%;
+  margin-right: 0%;
+  margin-left: 0%;
 }
 .event-listing {
+  margin: 5%;
   display: flex;
   flex-direction: column; /* Stack elements vertically */
   align-items: center; /* Align items horizontally to the center */
   margin-bottom: 1rem;
-  background-color: #5c7bcf; /* Light gray background */
+  background-color: #faf9f6af; /* Light gray background */
   padding: 1.5rem; /* Add padding for better spacing */
   border-radius: 10px; /* Rounded corners */
   /* border: 2px solid #3d4fb8; */
@@ -75,7 +79,7 @@ h1{
 }
 
 .event-listing:hover {
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Increase shadow on hover */
+  box-shadow: 0 8px 16px rgba(0.3, 0.3, 0.3, 0.3); /* Increase shadow on hover */
 }
 
 
@@ -253,13 +257,20 @@ header {
   color: #4b4e5d89; /* Change to desired hover color */
 }
 
-.signed-up{
+/* .signed-up{
   background-color: #6fc49b;
   color:white;
   width:280px;
   padding-left: 50px;
   height:fit-content;
   margin-top: 100px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.7);
+} */
+.signed-up{
+  width: 27%;
+  background-color: #6fc49b;
+  z-index: 0;
+  margin-top: 7%;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.7);
 }
 .ar{
@@ -268,5 +279,31 @@ header {
 }
 
 body{
-  background-color:  #bac0e589;
+  background-color: #d6f7e7;
+}
+.h{
+  padding: 2%;
+}
+.lis{
+  padding: 2%;
+  margin: 0%;
+  list-style:none;
+}
+h2{
+  font-size: 30px;
+  font-family: "Gemunu Libre", sans-serif;
+  color: white;
+}
+#hs{
+  font-size: 20px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: white;
+  margin-left: 7%;
+}
+
+#hsc{
+  font-size: 20px;
+  font-family: "Gemunu Libre", sans-serif;
+  color: white;
+  margin-left: 7%;
 }
