--- a/hackathon/Listings2.css
+++ b/hackathon/Listings2.css
@@ -1,11 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200..800&display=swap');
 .container {
     display: flex;
 }
 
 .sidebar {
-    flex: 0 0 20%;
-    background-color: #f0f0f0;
-    padding: 1rem;
+  flex: 0 0 20%;
+  background-color: #6fc49b;
+  padding-bottom:20%;
+  z-index: 0;
+  margin-top: 5%;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.7);
+  
+}
+
+#token-count{
+  display: flex;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
 
 .user-profile {
@@ -13,10 +24,13 @@
     margin-bottom: 1rem;
 }
 
+.us{
+  font-size: small;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 .user-profile img {
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
+  width: 50%;
+  height: 50%;
 }
 
 .content {
@@ -24,6 +38,14 @@
     display: flex;
 }
 
+.he{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+h1{
+  font-family: "Gemunu Libre", sans-serif;
+}
 .ad-listings {
     flex: 1;
     padding: 1rem;
