--- a/hackathon/Listings.css
+++ b/hackathon/Listings.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200..800&family=Lekton:ital,wght@0,400;0,700;1,400&display=swap');
 .container {
   display: flex;
 }
@@ -71,12 +72,14 @@ h1{
   align-items: center; /* Align items horizontally to the center */
   margin-bottom: 1rem;
   background-color: #faf9f6af; /* Light gray background */
-  padding: 1.5rem; /* Add padding for better spacing */
+  padding: 5%; /* Add padding for better spacing */
   border-radius: 10px; /* Rounded corners */
+  font-family:"Lekton", sans-serif;
   /* border: 2px solid #3d4fb8; */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Soft shadow */
   transition: box-shadow 0.3s ease; /* Smooth transition for hover effect */
 }
+
 
 .event-listing:hover {
   box-shadow: 0 8px 16px rgba(0.3, 0.3, 0.3, 0.3); /* Increase shadow on hover */
@@ -85,7 +88,8 @@ h1{
 
 
 .event-listing img {
-  width: 150px; /* Adjust image width as needed */
+  width: 50%; /* Adjust image width as needed */
+  border-radius: 10px;
   /* Removed margin-right as image is on top now */
 }
 
@@ -115,8 +119,8 @@ h1{
 }
 
 .event-details p {
-  font-family:Arial, Helvetica, sans-serif;
-  font-size: 0.5rem; /* Adjust font size for event descriptions */
+  font-family:"Lekton", sans-serif;
+  font-size: 15px; /* Adjust font size for event descriptions */
   color: #000000; /* Set color for event descriptions */
   margin-bottom: 0.5rem; /* Add margin bottom for spacing */
 }
@@ -154,7 +158,7 @@ header {
   background-color: #ffffff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.7); /* Add shadow */
   padding: 1% 1%;
-  background-color:#3d4fb8;
+  background-color:#76c676fc;
   position: fixed;
   z-index: 1;
   display: flexbox;
