hover buttons color, little bit of index2

--- a/hackathon/Listings.css
+++ b/hackathon/Listings.css
@@ -271,7 +271,7 @@ header {
 }
 
 .side-links a:hover {
-  color: #4b4e5d89; /* Change to desired hover color */
+  color: green; /* Change to desired hover color */
 }
 
 /* .signed-up{
