--- a/hackathon/createEvent/index2.css
+++ b/hackathon/createEvent/index2.css
@@ -18,6 +18,7 @@ body {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 3%;
 }
 
 h1 {
@@ -43,7 +44,7 @@ form {
 }
 
 .title-section .section-heading {
-    margin-bottom: 20px; /* Add space between heading and buttons */
+    margin-bottom: 5px; /* Add space between heading and buttons */
 }
 
 .datetime-section .section-heading {
